# infinite-money-printer

./: .gitignore  Cargo.lock.license  Cargo.toml  README.adoc
.github/actions/boilerplate/: action.yml
.github/actions/rust-toolchain/: action.yml
.github/workflows/: run-build-checks.yml
.reuse/: dep5
core/: Cargo.toml
core/src/: credits.rs  game_state.rs  lib.rs  time.rs  timing.rs  ui.rs
frontend/: index.html
native/: Cargo.toml  build.rs  tauri.conf.json
native/src/: lib.rs  main.rs
