# SPDX-FileCopyrightText: 2024 FaultyRAM <316014+FaultyRAM@users.noreply.github.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "infinite-money-printer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.bevy_ecs]
version = "^0.13.0"
default-features = false
features = ["multi-threaded"]

[dependencies.wasm-bindgen]
version = "^0.2.0"

[lib]
crate-type = ["cdylib"]
