# SPDX-FileCopyrightText: 2024 FaultyRAM <316014+FaultyRAM@users.noreply.github.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "infinite-money-printer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.bevy_ecs]
version = "^0.13.0"
default-features = false
features = ["multi-threaded"]

[dependencies.bigdecimal]
version = "^0.4.0"

[dependencies.wasm-bindgen]
version = "^0.2.0"

[dependencies.web-sys]
version = "^0.3.0"
features = [
    "AnimationTimeline",
    "Document",
    "Element",
    "Node",
    "DocumentTimeline",
    "Window",
]

[lib]
crate-type = ["cdylib"]
