# SPDX-FileCopyrightText: 2024 FaultyRAM <316014+FaultyRAM@users.noreply.github.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "infinite-money-printer"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies.tauri-build]
version = "^2.0.0-beta"
features = []

[dependencies.serde]
version = "^1.0.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.0"

[dependencies.tauri]
version = "^2.0.0-beta"
features = []

[dependencies.tauri-plugin-shell]
version = "^2.0.0-beta"

[lib]
name = "infinite_money_printer_lib"
crate-type = ["lib", "cdylib", "staticlib"]
